--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,14 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>aqui vamos a hacer un blog post</h1>
-    <p>y este es el parrafo de inicio</p>
+    <div id="container">
+      <div id="post">
+        <h1>Este es el titulo atractivo e interesante el post</h1>
+        <p>
+          y este es el parrafo de inicio donde vamos a explicar cosas increibles
+          que se pueden hacer con ramas
+        </p>
+      </div>
+    </div>
   </body>
 </html>
