estructura inicial de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,12 +5,14 @@
   </head>
   <body>
     <div id="container">
-      <div id="post">
-        <h1>Este es el titulo atractivo e interesante el post</h1>
-        <p>
-          y este es el parrafo de inicio donde vamos a explicar cosas increibles
-          que se pueden hacer con ramas
-        </p>
+      <div id="cabecera">
+        <div id="post">
+          <h1>Este es el titulo atractivo e interesante el post</h1>
+          <p>
+            y este es el parrafo de inicio donde vamos a explicar cosas
+            increibles que se pueden hacer con ramas
+          </p>
+        </div>
       </div>
     </div>
   </body>
