acomodando la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,13 +6,14 @@
   <body>
     <div id="container">
       <div id="cabecera">
-        <div id="post">
-          <h1>Este es el titulo atractivo e interesante el post</h1>
-          <p>
-            y este es el parrafo de inicio donde vamos a explicar cosas
-            increibles que se pueden hacer con ramas
-          </p>
-        </div>
+        <p>cabecera</p>
+      </div>
+      <div id="post">
+        <h1>Este es el titulo atractivo e interesante el post</h1>
+        <p>
+          y este es el parrafo de inicio donde vamos a explicar cosas increibles
+          que se pueden hacer con ramas
+        </p>
       </div>
     </div>
   </body>
