Finalizada la cabecera con diseño azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,10 @@
   <body>
     <div id="container">
       <div id="cabecera">
-        <p>cabecera</p>
+        <p>
+          Hyperblog
+          <span id="tagline">Tu blog de confianza</span>
+        </p>
       </div>
       <div id="post">
         <h1>Este es el titulo atractivo e interesante el post</h1>
