agregado el contenido adicional del bolg

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,17 +1,22 @@
 <html>
-  <head>
-    <title>El titulo del post</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <div id="container">
-      <div id="post">
-        <h1>Este es el titulo atractivo e interesante el post</h1>
-        <p>
-          y este es el parrafo de inicio donde vamos a explicar cosas increibles
-          que se pueden hacer con ramas
-        </p>
-      </div>
+
+<head>
+  <title>El titulo del post</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <div id="container">
+    <div id="post">
+      <h1>Este es el titulo atractivo e interesante el post</h1>
+      <p>
+        y este es el parrafo de inicio donde vamos a explicar cosas increibles
+        que se pueden hacer con ramas
+      </p>
+      <p>Los blogs son la mejor forma de compartir informacion de tus ideas. Mucho mas que ir a conferencias o salir en
+        Youtube. Excepto si eres rockstar . Pero estadisticamente no lo eres.... por ahora.</p>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
