--- a/blogpost.html
+++ b/blogpost.html
@@ -2,43 +2,16 @@
 
 <head>
   <title>El titulo del post</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="css/estilos.css">
 </head>
 
 <body>
   <div id="container">
     <div id="post">
-      <h1>Este es el titulo atractivo e interesante el post</h1>
-      <p>
-        y este es el parrafo de inicio donde vamos a explicar cosas increibles
-        que se pueden hacer con ramas
-      </p>
-      <p>Los blogs son la mejor forma de compartir informacion de tus ideas. Mucho mas que ir a conferencias o salir
-        en
-        Youtube. Excepto si eres rockstar . Pero estadisticamente no lo eres.... por ahora.</p>
-
-      <head>
-        <title>El titulo del post</title>
-        <link rel="stylesheet" href="styles.css" />
-      </head>
-
-      <body>
-        <div id="container">
-          <div id="cabecera">
-            <p>
-              Hyperblog
-              <span id="tagline">Tu blog de confianza</span>
-            </p>
-          </div>
-          <div id="post">
-            <h1>Este es el titulo atractivo e interesante el post</h1>
-            <p>
-              y este es el parrafo de inicio donde vamos a explicar cosas increibles
-              que se pueden hacer con ramas
-            </p>
-          </div>
-        </div>
+      <h1>Este es el titulo atractivo e interesante del post</h1>
+      <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer en las ramas</p>
     </div>
+  </div>
 </body>
 
 </html>
