--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,8 @@
 <body>
   <div id="container">
     <div id="cabecera">
-      Cabecera
+      Hiperblog
+      <span id="tagline">tu blog de confianza</span>
     </div>
     <div id="post">
       <h1>Este es el titulo atractivo e interesante del post</h1>
