--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
   <div id="container">
     <div id="cabecera">
       Hiperblog
-      <span id="tagline">tu blog de confianza</span>
+      <span id="tagline">tu blog de cabecera</span>
     </div>
     <div id="post">
       <h1>Este es el titulo atractivo e interesante del post</h1>
