--- a/blogpost.html
+++ b/blogpost.html
@@ -9,13 +9,14 @@
   <div id="container">
     <div id="cabecera">
       Hiperblog
-      <span id="tagline">tu blog de confianza</span>
+      <span id="tagline">tu blog maestro</span>
     </div>
     <div id="post">
       <h1>Este es el titulo atractivo e interesante del post</h1>
       <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer en las ramas</p>
       <p>Los blops son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en
         Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres.... por ahora.</p>
+      <p>suscribete y dale like</p>
     </div>
   </div>
 </body>
