--- a/blogpost.html
+++ b/blogpost.html
@@ -18,7 +18,9 @@
         Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres.... por ahora.</p>
       <p>suscribete y dale like</p>
     </div>
-  </div>
+    <div id="footer">
+      Hecho con amor en Plazi <\3💚 </div>
+    </div>
 </body>
 
 </html>
