arreglando las imagenes

--- a/blogpost.html
+++ b/blogpost.html
@@ -2,13 +2,13 @@
 
 <head>
   <title>El titulo del post a hiperblog 2.0</title>
-  <link rel="stylesheet" href="../css/estilos.css">
+  <link rel="stylesheet" href="./assets/images/dragon.png">
 </head>
 
 <body>
   <div id="container">
     <div id="cabecera">
-      <img src="../images/dragon.png" id="logo">
+      <img src="./assets/images/dragon.png" id="logo">
       Hiperblog
       <span id="tagline">tu blog de cabecera</span>
     </div>
