cambiando el head

--- a/blogpost.html
+++ b/blogpost.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>El titulo del post a hiperblog 2.0</title>
-  <link rel="stylesheet" href="./assets/images/dragon.png">
+  <link rel="stylesheet" href="./assets/css/estilos.css">
 </head>
 
 <body>
