--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>El titulo del post a hiperblog 2.0</title>
+  <title>El Titulo Del Post a Hiperblog 2.0</title>
   <link rel="stylesheet" href="./assets/css/estilos.css">
 </head>
 
