--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>El titulo del post a hiperblog 2.0</title>
+  <title>El Titulo Del Post a Hiperblog 2.0.</title>
   <link rel="stylesheet" href="./assets/css/estilos.css">
 </head>
 
@@ -19,7 +19,9 @@
         Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres.... por ahora.</p>
       <p>suscribete y dale like</p>
     </div>
-  </div>
+    <div id="footer">
+      Hecho con amor en Plazi <\3💚 </div>
+    </div>
 </body>
 
 </html>
