Agregando mayusculas al tagline

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
     <div id="cabecera">
       <img src="./assets/images/dragon.png" id="logo">
       Hiperblog
-      <span id="tagline">tu blog de cabecera</span>
+      <span id="tagline">Tu Blog de Cabecera</span>
     </div>
     <div id="post">
       <h1>Este es el titulo atractivo e interesante del post</h1>
