tildes y mayusculas arregladas

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,11 +14,11 @@
     </div>
     <div id="post">
       <h1>Este es el titulo atractivo e interesante del post</h1>
-      <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer en las ramas y
+      <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer en las ramas y
         crear.</p>
-      <p>Los blops son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en
+      <p>Los blops son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en
         Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres.... por ahora.</p>
-      <p>suscribete y dale like</p>
+      <p>Suscribete y dale like</p>
     </div>
     <div id="footer">
       Hecho con amor en Plazi <\3💚 </div>
