--- a/blogpost.html
+++ b/blogpost.html
@@ -14,9 +14,12 @@
     </div>
     <div id="post">
       <h1>Este es el titulo atractivo e interesante del post</h1>
-      <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer en las ramas y
+      <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer en
+        las
+        ramas y
         crear.</p>
-      <p>Los blops son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en
+      <p>Los blops son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o
+        salir en
         Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres.... por ahora.</p>
       <p>Suscribete y dale like</p>
     </div>
