cambio de titulo

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>El Titulo Del Post a Hiperblog 2.0.</title>
+  <title>Hiperblog 2.0. es un blog del futuro</title>
   <link rel="stylesheet" href="./assets/css/estilos.css">
 </head>
 
