Cambio de titulo

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Hiperblog 2.0. es un blog del futuro</title>
+  <title>Hiperblog 2.0 es un Blog del Futuro</title>
   <link rel="stylesheet" href="./assets/css/estilos.css">
 </head>
 
