agregando mi nombre
Casi finalizando😁

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         salir en
         Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres.... por ahora.</p>
       <p>Suscribete y dale like</p>
+      <p>Diana Carolina Campuzano Garzón</p>
     </div>
     <div id="footer">
       Hecho con amor en Plazi <\3💚 </div>
