agregue una imagen al blog

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         las
         ramas y
         crear.</p>
+      <p><img src="./assets/images/team.jpg" width="100%">
+      </p>
       <p>Los blops son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o
         salir en
         Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres.... por ahora.</p>
