cambiando nombrede image team

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         las
         ramas y
         crear.</p>
-      <p><img src="./assets/images/team.jpg" width="100%">
+      <p><img src="./assets/images/Theteam.jpg" width="100%">
       </p>
       <p>Los blops son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o
         salir en
